Updated the java serialization post